Added Freezer, Required TankRenderer Changes which required more changes to everything using it